// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reef Detail Page should render with given state from Redux store: snapshot-with-data 1`] = `
<div>
  <mock-appbar
    classname="NavBar-appBar-89"
    color="primary"
    position="static"
  >
    <mock-toolbar
      classname="NavBar-toolbar-91"
    >
      <mock-drawer
        anchor="left"
        classes="[object Object]"
        open="false"
      >
        <mock-iconbutton
          style="align-self: flex-end; margin-right: 5px; margin-top: 5px; color: white;"
        >
          <clear />
        </mock-iconbutton>
        <mock-link
          href="/"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          HOME
        </mock-link>
        <mock-link
          href="/buoy"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          BUOY
        </mock-link>
        <mock-link
          href="/drones"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          DRONE
        </mock-link>
        <mock-link
          href="/about"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          ABOUT
        </mock-link>
        <mock-link
          href="/faq"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          FAQ
        </mock-link>
        <mock-link
          href="/apply"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          APPLY
        </mock-link>
      </mock-drawer>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-5 MuiGrid-grid-sm-4"
        >
          <mock-box
            alignitems="center"
            display="flex"
            flexwrap="nowrap"
          >
            <mock-iconbutton
              color="inherit"
              edge="start"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                />
              </svg>
            </mock-iconbutton>
            <mock-typography
              variant="h4"
            >
              Aqua
            </mock-typography>
            <mock-typography
              style="color: rgb(138, 198, 222);"
              variant="h4"
            >
              link
            </mock-typography>
          </mock-box>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-flex-end MuiGrid-grid-xs-7 MuiGrid-grid-sm-8"
        >
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <mock-button>
              SIGN IN
            </mock-button>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <mock-button>
              REGISTER
            </mock-button>
          </div>
        </div>
      </div>
    </mock-toolbar>
  </mock-appbar>
  <mock-dialog
    maxwidth="md"
    open="false"
  >
    <mock-card>
      <div
        class="MuiCardHeader-root RegisterDialog-dialogHeader-99"
      >
        <div
          class="MuiCardHeader-content"
        >
          <mock-typography
            classname="MuiCardHeader-title"
            component="span"
            display="block"
            variant="h5"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-around MuiGrid-grid-xs-12"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6"
                >
                  <mock-typography
                    variant="h4"
                  >
                    Aqua
                  </mock-typography>
                  <mock-typography
                    style="color: rgb(138, 198, 222);"
                    variant="h4"
                  >
                    link
                  </mock-typography>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-flex-end MuiGrid-grid-xs-1"
                >
                  <mock-iconbutton
                    classname="RegisterDialog-closeButton-98"
                    size="small"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                      />
                    </svg>
                  </mock-iconbutton>
                </div>
              </div>
            </div>
          </mock-typography>
        </div>
      </div>
      <mock-cardcontent
        style="padding: 0px;"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
            style="margin-top: 0.5rem;"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <mock-typography
                color="textSecondary"
                variant="h5"
              >
                Create an account
              </mock-typography>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
          >
            <form
              class="RegisterDialog-registerForm-100"
            >
              <div
                class="MuiGrid-root RegisterDialog-textFieldWrapper-101 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="firstName"
                  inputprops="[object Object]"
                  label="First Name"
                  name="firstName"
                  placeholder="First Name"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root RegisterDialog-textFieldWrapper-101 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="lastName"
                  inputprops="[object Object]"
                  label="Last Name"
                  name="lastName"
                  placeholder="Last Name"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root RegisterDialog-textFieldWrapper-101 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="emailAddress"
                  inputprops="[object Object]"
                  label="Email Address"
                  name="emailAddress"
                  placeholder="Email Address"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root RegisterDialog-textFieldWrapper-101 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="password"
                  inputprops="[object Object]"
                  label="Password"
                  name="password"
                  placeholder="Password"
                  type="password"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-space-around MuiGrid-grid-xs-11"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                >
                  <mock-checkbox
                    checked="false"
                    classname="RegisterDialog-termsCheckbox-103"
                    color="primary"
                  />
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10"
                >
                  <mock-typography
                    classname="RegisterDialog-termsText-104"
                    color="textSecondary"
                    variant="subtitle1"
                  >
                    I have read the
                     
                    <a
                      href="/"
                      style="color: black;"
                    >
                      Terms and Conditions
                    </a>
                  </mock-typography>
                </div>
              </div>
              <div
                class="MuiGrid-root RegisterDialog-button-105 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-button
                  color="primary"
                  disabled="true"
                  fullwidth="true"
                  size="large"
                  type="submit"
                  variant="contained"
                >
                  REGISTER NOW
                </mock-button>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-typography
                  classname="RegisterDialog-termsText-104"
                  color="textSecondary"
                  variant="subtitle1"
                >
                  Have an account?
                   
                  <mock-button
                    color="primary"
                  >
                    SIGN IN
                  </mock-button>
                </mock-typography>
              </div>
            </form>
          </div>
        </div>
      </mock-cardcontent>
    </mock-card>
  </mock-dialog>
  <mock-dialog
    maxwidth="md"
    open="false"
  >
    <mock-card>
      <div
        class="MuiCardHeader-root SignInDialog-dialogHeader-107"
      >
        <div
          class="MuiCardHeader-content"
        >
          <mock-typography
            classname="MuiCardHeader-title"
            component="span"
            display="block"
            variant="h5"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-around MuiGrid-grid-xs-12"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6"
                >
                  <mock-typography
                    variant="h4"
                  >
                    Aqua
                  </mock-typography>
                  <mock-typography
                    style="color: rgb(138, 198, 222);"
                    variant="h4"
                  >
                    link
                  </mock-typography>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-flex-end MuiGrid-grid-xs-1"
                >
                  <mock-iconbutton
                    classname="SignInDialog-closeButton-106"
                    size="small"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                      />
                    </svg>
                  </mock-iconbutton>
                </div>
              </div>
            </div>
          </mock-typography>
        </div>
      </div>
      <div
        class="MuiCollapse-container MuiCollapse-hidden"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner"
          >
            <div
              class="MuiPaper-root MuiAlert-root MuiAlert-standardSuccess MuiPaper-elevation0"
              role="alert"
            >
              <div
                class="MuiAlert-icon"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20,12A8,8 0 0,1 12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4C12.76,4 13.5,4.11 14.2, 4.31L15.77,2.74C14.61,2.26 13.34,2 12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0, 0 22,12M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
                  />
                </svg>
              </div>
              <div
                class="MuiAlert-message"
              >
                Password reset email sent to .
              </div>
              <div
                class="MuiAlert-action"
              >
                <mock-iconbutton
                  aria-label="close"
                  color="inherit"
                  size="small"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                    />
                  </svg>
                </mock-iconbutton>
              </div>
            </div>
          </div>
        </div>
      </div>
      <mock-cardcontent>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
            style="margin: 1rem 0px 1rem 0px;"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <mock-typography
                color="textSecondary"
                variant="h5"
              >
                Sign In
              </mock-typography>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
          >
            <form
              class="SignInDialog-signInForm-108"
            >
              <div
                class="MuiGrid-root SignInDialog-textFieldWrapper-109 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-typography
                  classname="SignInDialog-formText-111"
                  variant="subtitle2"
                >
                  or login with email address
                </mock-typography>
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="emailAddress"
                  inputprops="[object Object]"
                  label="Email Address"
                  name="emailAddress"
                  placeholder="Email Address"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root SignInDialog-textFieldWrapper-109 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="password"
                  inputprops="[object Object]"
                  label="Password"
                  name="password"
                  placeholder="Password"
                  type="password"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-button
                  style="text-decoration: none;"
                >
                  <mock-typography
                    color="textSecondary"
                    variant="subtitle2"
                  >
                    Forgot your password?
                  </mock-typography>
                </mock-button>
              </div>
              <div
                class="MuiGrid-root SignInDialog-button-112 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-button
                  color="primary"
                  fullwidth="true"
                  size="large"
                  type="submit"
                  variant="contained"
                >
                  SIGN IN
                </mock-button>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-typography
                  classname="SignInDialog-formText-111"
                  color="textSecondary"
                  variant="subtitle1"
                >
                  Don't have an account?
                   
                  <mock-button
                    color="primary"
                  >
                    REGISTER
                  </mock-button>
                </mock-typography>
              </div>
            </form>
          </div>
        </div>
      </mock-cardcontent>
    </mock-card>
  </mock-dialog>
  <div
    class="MuiGrid-root ReefNavBar-root-113 MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-around MuiGrid-grid-xs-12"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-11"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-align-items-xs-center"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <mock-iconbutton
            aria-label="menu"
            color="primary"
            edge="start"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
              />
            </svg>
          </mock-iconbutton>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-9"
        >
          
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <mock-typography
              variant="subtitle1"
            >
              Latest data: May 20, 2020
            </mock-typography>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-5"
    />
  </div>
  <div
    class="MuiGrid-root ReefDetails-root-115 MuiGrid-container MuiGrid-justify-xs-center"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-baseline MuiGrid-grid-xs-11"
    >
      <mock-typography
        classname="ReefDetails-cardTitles-116"
        style="margin-left: 2rem;"
        variant="h6"
      >
        LOCATION:
      </mock-typography>
      <mock-typography
        classname="ReefDetails-cardTitles-116"
        variant="subtitle2"
      >
        LAT: 
        0
      </mock-typography>
      <mock-typography
        classname="ReefDetails-cardTitles-116"
        variant="subtitle2"
      >
        LONG: 
        0
      </mock-typography>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 MuiGrid-item MuiGrid-justify-xs-space-between MuiGrid-grid-xs-11"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
      >
        <div
          class="ReefDetails-container-117"
        >
          <mock-map
            polygon="[object Object]"
          />
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
      >
        <div
          class="ReefDetails-container-117"
        >
          <mock-featurevideo />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 MuiGrid-item MuiGrid-justify-xs-space-between MuiGrid-grid-xs-11"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-3"
      >
        <div
          class="ReefDetails-smallContainer-118"
        >
          <mock-card
            classname="Satellite-card-124"
            style="background-color: rgb(8, 91, 163);"
          >
            <div
              class="MuiCardHeader-root Satellite-header-126"
            >
              <div
                class="MuiCardHeader-content"
              >
                <mock-typography
                  classname="MuiCardHeader-title"
                  component="span"
                  display="block"
                  variant="h5"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-space-between"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-8"
                    >
                      <mock-typography
                        classname="Satellite-cardTitle-119"
                        variant="h6"
                      >
                        SATELLITE OBSERVATION
                      </mock-typography>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                    >
                      <img
                        alt="satellite"
                        class="Satellite-titleImage-125"
                        src="satellite.svg"
                      />
                    </div>
                  </div>
                </mock-typography>
              </div>
            </div>
            <mock-cardcontent
              classname="Satellite-content-127"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-space-between"
                style="height: 100%;"
              >
                <div
                  class="MuiGrid-root Satellite-contentTextWrapper-128 MuiGrid-container MuiGrid-item MuiGrid-align-content-xs-flex-start MuiGrid-grid-xs-12"
                >
                  <div
                    class="MuiGrid-root Satellite-contentMeasure-123 MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-12 MuiGrid-grid-lg-12 MuiGrid-grid-xl-6"
                  >
                    <mock-typography
                      classname="Satellite-contentTextTitles-120"
                      color="textPrimary"
                      variant="subtitle2"
                    >
                      SURFACE TEMP
                    </mock-typography>
                    <mock-typography
                      classname="Satellite-contentTextValues-121"
                      color="textPrimary"
                    >
                      26.0 °C
                    </mock-typography>
                  </div>
                  <div
                    class="MuiGrid-root Satellite-contentMeasure-123 MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-12 MuiGrid-grid-lg-12 MuiGrid-grid-xl-6"
                  >
                    <mock-typography
                      classname="Satellite-contentTextTitles-120"
                      color="textPrimary"
                      variant="subtitle2"
                    >
                      HISTORICAL MAX TEMP
                    </mock-typography>
                    <mock-typography
                      classname="Satellite-contentTextValues-121"
                      color="textPrimary"
                    >
                      23.0 °C
                    </mock-typography>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
                  >
                    <mock-typography
                      classname="Satellite-contentTextTitles-120"
                      color="textPrimary"
                      variant="subtitle2"
                    >
                      DEGREE HEATING WEEKS
                    </mock-typography>
                    <mock-tooltip
                      title="Degree Heating Weeks - a measure of the amount of time above the 20 year historical maximum temperatures"
                    >
                      <mock-typography
                        classname="Satellite-contentTextValues-121"
                        color="textPrimary"
                      >
                        0.1 DHW
                      </mock-typography>
                    </mock-tooltip>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-flex-end"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-center MuiGrid-grid-xs-1"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
                      style="background-color: rgb(8, 91, 163); height: 2rem;"
                    >
                      <mock-typography
                        variant="caption"
                      >
                        0
                      </mock-typography>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-center MuiGrid-grid-xs-1"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
                      style="background-color: rgb(12, 157, 165); height: 2rem;"
                    >
                      <mock-typography
                        variant="caption"
                      >
                        2
                      </mock-typography>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-center MuiGrid-grid-xs-1"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
                      style="background-color: rgb(117, 180, 114); height: 2rem;"
                    >
                      <mock-typography
                        variant="caption"
                      >
                        4
                      </mock-typography>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-center MuiGrid-grid-xs-1"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
                      style="background-color: rgb(123, 217, 37); height: 2rem;"
                    >
                      <mock-typography
                        variant="caption"
                      >
                        6
                      </mock-typography>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-center MuiGrid-grid-xs-1"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
                      style="background-color: rgb(193, 229, 34); height: 2rem;"
                    >
                      <mock-typography
                        variant="caption"
                      >
                        8
                      </mock-typography>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-center MuiGrid-grid-xs-1"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
                      style="background-color: rgb(229, 187, 43); height: 2rem;"
                    >
                      <mock-typography
                        variant="caption"
                      >
                        10
                      </mock-typography>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-center MuiGrid-grid-xs-1"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
                      style="background-color: rgb(230, 121, 40); height: 2rem;"
                    >
                      <mock-typography
                        variant="caption"
                      >
                        12
                      </mock-typography>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-center MuiGrid-grid-xs-1"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
                      style="background-color: rgb(232, 79, 46); height: 2rem;"
                    >
                      <mock-typography
                        variant="caption"
                      >
                        14
                      </mock-typography>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-center MuiGrid-grid-xs-1"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
                      style="background-color: rgb(216, 69, 36); height: 2rem;"
                    >
                      <mock-typography
                        variant="caption"
                      >
                        16
                      </mock-typography>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-center MuiGrid-grid-xs-1"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
                      style="background-color: rgb(128, 58, 32); height: 2rem;"
                    >
                      <mock-typography
                        variant="caption"
                      >
                        18
                      </mock-typography>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-center MuiGrid-grid-xs-1"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
                      style="background-color: rgb(185, 41, 68); height: 2rem;"
                    >
                      <mock-typography
                        variant="caption"
                      >
                        20
                      </mock-typography>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-center MuiGrid-grid-xs-1"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
                      style="background-color: rgb(128, 48, 126); height: 2rem;"
                    >
                      <mock-typography
                        variant="caption"
                      >
                        25
                      </mock-typography>
                    </div>
                  </div>
                </div>
              </div>
            </mock-cardcontent>
          </mock-card>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-3"
      >
        <div
          class="ReefDetails-smallContainer-118"
        >
          <mock-card
            classname="Sensor-card-135"
          >
            <div
              class="MuiCardHeader-root Sensor-header-137"
            >
              <div
                class="MuiCardHeader-content"
              >
                <mock-typography
                  classname="MuiCardHeader-title"
                  component="span"
                  display="block"
                  variant="h5"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-space-between"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8"
                    >
                      <mock-typography
                        classname="Sensor-cardTitle-130"
                        variant="h6"
                      >
                        SENSOR OBSERVATION
                      </mock-typography>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                    >
                      <img
                        alt="buoy"
                        class="Sensor-titleImage-136"
                        src="buoy.svg"
                      />
                    </div>
                  </div>
                </mock-typography>
              </div>
            </div>
            <mock-cardcontent
              classname="Sensor-content-138"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-space-between"
                style="height: 100%;"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-content-xs-flex-start MuiGrid-grid-xs-7"
                >
                  <div
                    class="MuiGrid-root Sensor-contentMeasure-134 MuiGrid-item MuiGrid-grid-xs-12"
                  >
                    <mock-typography
                      classname="Sensor-contentTextTitles-131"
                      color="textPrimary"
                      variant="subtitle2"
                    >
                      SURFACE TEMP
                    </mock-typography>
                    <mock-typography
                      classname="Sensor-contentTextValues-132"
                      color="textPrimary"
                    >
                      25.0
                       °C
                    </mock-typography>
                  </div>
                  <div
                    class="MuiGrid-root Sensor-contentMeasure-134 MuiGrid-item MuiGrid-grid-xs-12"
                  >
                    <mock-typography
                      classname="Sensor-contentTextTitles-131"
                      color="textPrimary"
                      variant="subtitle2"
                    >
                      TEMP AT 4M
                    </mock-typography>
                    <mock-typography
                      classname="Sensor-contentTextValues-132"
                      color="textPrimary"
                    >
                      25.0
                       °C
                    </mock-typography>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-flex-end MuiGrid-grid-xs-5"
                >
                  <img
                    alt="sensor"
                    class="Sensor-contentImage-139"
                    src="sensor.svg"
                  />
                </div>
              </div>
            </mock-cardcontent>
          </mock-card>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-3"
      >
        <div
          class="ReefDetails-smallContainer-118"
        >
          <mock-card
            classname="Wind-card-142"
          >
            <div
              class="MuiCardHeader-root Wind-header-143"
            >
              <div
                class="MuiCardHeader-content"
              >
                <mock-typography
                  classname="MuiCardHeader-title"
                  component="span"
                  display="block"
                  variant="h5"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
                    >
                      <mock-typography
                        color="textSecondary"
                        variant="h6"
                      >
                        CORAL BLEACHING ALERT LEVEL
                      </mock-typography>
                    </div>
                  </div>
                </mock-typography>
              </div>
            </div>
            <mock-cardcontent
              classname="Wind-contentWrapper-144"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
                style="height: 100%;"
              >
                <img
                  alt="alert-level"
                  src="alert_nostress.svg"
                />
              </div>
            </mock-cardcontent>
          </mock-card>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-3"
      >
        <div
          class="ReefDetails-smallContainer-118"
        >
          <mock-card
            classname="Waves-card-150"
          >
            <mock-cardcontent
              classname="Waves-contentWrapper-152"
            >
              <div
                class="MuiGrid-root Waves-content-153 MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
                style="height: 100%;"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
                >
                  <mock-typography
                    classname="Waves-cardTitle-145"
                    variant="h6"
                  >
                    WIND
                  </mock-typography>
                  <img
                    alt="wind"
                    class="Waves-titleImages-151"
                    src="wind.svg"
                  />
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
                  >
                    <mock-typography
                      classname="Waves-contentTextTitles-146"
                      color="textSecondary"
                      variant="subtitle2"
                    >
                      SPEED
                    </mock-typography>
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-baseline"
                    >
                      <mock-typography
                        classname="Waves-contentTextValues-147"
                        color="textSecondary"
                      >
                        9.0
                      </mock-typography>
                      <mock-typography
                        classname="Waves-contentUnits-148"
                        color="textSecondary"
                        variant="h6"
                      >
                        KM/H
                      </mock-typography>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
                  >
                    <mock-typography
                      classname="Waves-contentTextTitles-146"
                      color="textSecondary"
                      variant="subtitle2"
                    >
                      DIRECTION
                    </mock-typography>
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-baseline"
                    >
                      <img
                        alt="arrow"
                        class="Waves-arrow-154"
                        src="directioncircle.svg"
                        style="transform: rotate(360deg);"
                      />
                      <mock-typography
                        classname="Waves-contentTextValues-147"
                        color="textSecondary"
                        variant="h3"
                      >
                        180°
                      </mock-typography>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
                >
                  <mock-typography
                    classname="Waves-cardTitle-145"
                    variant="h6"
                  >
                    WAVES
                  </mock-typography>
                  <img
                    alt="waves"
                    class="Waves-titleImages-151"
                    src="waves.svg"
                  />
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-space-between MuiGrid-grid-xs-12"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-lg-4"
                  >
                    <mock-typography
                      classname="Waves-contentTextTitles-146"
                      color="textSecondary"
                      variant="subtitle2"
                    >
                      HEIGHT
                    </mock-typography>
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-baseline"
                    >
                      <mock-typography
                        classname="Waves-contentTextValues-147"
                        color="textSecondary"
                      >
                        5.0
                      </mock-typography>
                      <mock-typography
                        classname="Waves-contentUnits-148"
                        color="textSecondary"
                        variant="h6"
                      >
                        Μ
                      </mock-typography>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-lg-3"
                  >
                    <mock-typography
                      classname="Waves-contentTextTitles-146"
                      color="textSecondary"
                      variant="subtitle2"
                    >
                      PERIOD
                    </mock-typography>
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-baseline"
                    >
                      <mock-typography
                        classname="Waves-contentTextValues-147"
                        color="textSecondary"
                      >
                        2
                      </mock-typography>
                      <mock-typography
                        classname="Waves-contentUnits-148"
                        color="textSecondary"
                        variant="h6"
                      >
                        S
                      </mock-typography>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-lg-5"
                  >
                    <mock-typography
                      classname="Waves-contentTextTitles-146"
                      color="textSecondary"
                      variant="subtitle2"
                    >
                      DIRECTION
                    </mock-typography>
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-baseline"
                    >
                      <img
                        alt="arrow"
                        class="Waves-arrow-154"
                        src="directioncircle.svg"
                        style="transform: rotate(360deg);"
                      />
                      <mock-typography
                        classname="Waves-contentTextValues-147"
                        color="textSecondary"
                      >
                        180
                        °
                      </mock-typography>
                    </div>
                  </div>
                </div>
              </div>
            </mock-cardcontent>
          </mock-card>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
    >
      <mock-charts
        dailydata="[object Object]"
        depth="4"
        maxmonthlymean="22"
        temperaturethreshold="23"
      />
    </div>
    <div
      class="MuiGrid-root Surveys-root-155 MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
    >
      <div
        class="MuiGrid-root Surveys-surveyWrapper-156 MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-center MuiGrid-grid-xs-11 MuiGrid-grid-lg-6"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-md-12 MuiGrid-grid-lg-4"
        >
          <mock-typography
            classname="Surveys-title-157"
          >
            Survey History
          </mock-typography>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-grid-md-12 MuiGrid-grid-lg-4"
        >
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <mock-typography
              classname="Surveys-subTitle-158"
              variant="h6"
            >
              Survey History:
            </mock-typography>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <div
              class="MuiFormControl-root Surveys-formControl-159"
            >
              <div
                class="MuiInputBase-root MuiInput-root MuiInput-underline Surveys-selectedItem-160 MuiInputBase-formControl MuiInput-formControl"
              >
                <div
                  aria-haspopup="listbox"
                  aria-labelledby="survey-history survey-history"
                  class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                  id="survey-history"
                  role="button"
                  tabindex="0"
                >
                  <mock-typography
                    classname="Surveys-menuItem-161"
                    variant="h6"
                  >
                    All
                  </mock-typography>
                </div>
                <input
                  aria-hidden="true"
                  class="MuiSelect-nativeInput"
                  name="survey-history"
                  tabindex="-1"
                  value="all"
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSelect-icon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
                <mock-menu
                  anchorel="[object HTMLDivElement]"
                  id="menu-survey-history"
                  menulistprops="[object Object]"
                  open="false"
                  paperprops="[object Object]"
                >
                  <mock-menuitem
                    aria-selected="true"
                    data-value="all"
                    role="option"
                    selected="true"
                  >
                    <mock-typography
                      classname="Surveys-menuItem-161"
                      variant="h6"
                    >
                      All
                    </mock-typography>
                  </mock-menuitem>
                </mock-menu>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-grid-md-12 MuiGrid-grid-lg-4"
        >
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <mock-typography
              classname="Surveys-subTitle-158"
              variant="h6"
            >
              Observation:
            </mock-typography>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <div
              class="MuiFormControl-root Surveys-formControl-159"
            >
              <div
                class="MuiInputBase-root MuiInput-root MuiInput-underline Surveys-selectedItem-160 MuiInputBase-formControl MuiInput-formControl"
              >
                <div
                  aria-haspopup="listbox"
                  aria-labelledby="survey-observation survey-observation"
                  class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                  id="survey-observation"
                  role="button"
                  tabindex="0"
                >
                  <mock-typography
                    classname="Surveys-menuItem-161"
                    variant="h6"
                  >
                    Any
                  </mock-typography>
                </div>
                <input
                  aria-hidden="true"
                  class="MuiSelect-nativeInput"
                  name="survey-observation"
                  tabindex="-1"
                  value="any"
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSelect-icon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
                <mock-menu
                  anchorel="[object HTMLDivElement]"
                  id="menu-survey-observation"
                  menulistprops="[object Object]"
                  open="false"
                  paperprops="[object Object]"
                >
                  <mock-menuitem
                    aria-selected="true"
                    data-value="any"
                    role="option"
                    selected="true"
                  >
                    <mock-typography
                      classname="Surveys-menuItem-161"
                      variant="h6"
                    >
                      Any
                    </mock-typography>
                  </mock-menuitem>
                </mock-menu>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-11 MuiGrid-grid-lg-10"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
        />
      </div>
    </div>
  </div>
  <mock-appbar
    classname="Footer-appBar-172"
    position="static"
  >
    <mock-toolbar>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-center"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
        >
          <mock-typography
            variant="h4"
          >
            Aqua
          </mock-typography>
          <mock-typography
            style="color: rgb(138, 198, 222);"
            variant="h4"
          >
            link
          </mock-typography>
        </div>
      </div>
    </mock-toolbar>
  </mock-appbar>
</div>
`;

exports[`Reef Detail Page should render with given state from Redux store: snapshot-with-no-data 1`] = `
<div>
  <mock-appbar
    classname="NavBar-appBar-3"
    color="primary"
    position="static"
  >
    <mock-toolbar
      classname="NavBar-toolbar-5"
    >
      <mock-drawer
        anchor="left"
        classes="[object Object]"
        open="false"
      >
        <mock-iconbutton
          style="align-self: flex-end; margin-right: 5px; margin-top: 5px; color: white;"
        >
          <clear />
        </mock-iconbutton>
        <mock-link
          href="/"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          HOME
        </mock-link>
        <mock-link
          href="/buoy"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          BUOY
        </mock-link>
        <mock-link
          href="/drones"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          DRONE
        </mock-link>
        <mock-link
          href="/about"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          ABOUT
        </mock-link>
        <mock-link
          href="/faq"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          FAQ
        </mock-link>
        <mock-link
          href="/apply"
          style="margin: 1rem 2rem 2rem; font-size: 1rem; color: white;"
        >
          APPLY
        </mock-link>
      </mock-drawer>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-5 MuiGrid-grid-sm-4"
        >
          <mock-box
            alignitems="center"
            display="flex"
            flexwrap="nowrap"
          >
            <mock-iconbutton
              color="inherit"
              edge="start"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                />
              </svg>
            </mock-iconbutton>
            <mock-typography
              variant="h4"
            >
              Aqua
            </mock-typography>
            <mock-typography
              style="color: rgb(138, 198, 222);"
              variant="h4"
            >
              link
            </mock-typography>
          </mock-box>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-flex-end MuiGrid-grid-xs-7 MuiGrid-grid-sm-8"
        >
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <mock-button>
              SIGN IN
            </mock-button>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <mock-button>
              REGISTER
            </mock-button>
          </div>
        </div>
      </div>
    </mock-toolbar>
  </mock-appbar>
  <mock-dialog
    maxwidth="md"
    open="false"
  >
    <mock-card>
      <div
        class="MuiCardHeader-root RegisterDialog-dialogHeader-13"
      >
        <div
          class="MuiCardHeader-content"
        >
          <mock-typography
            classname="MuiCardHeader-title"
            component="span"
            display="block"
            variant="h5"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-around MuiGrid-grid-xs-12"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6"
                >
                  <mock-typography
                    variant="h4"
                  >
                    Aqua
                  </mock-typography>
                  <mock-typography
                    style="color: rgb(138, 198, 222);"
                    variant="h4"
                  >
                    link
                  </mock-typography>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-flex-end MuiGrid-grid-xs-1"
                >
                  <mock-iconbutton
                    classname="RegisterDialog-closeButton-12"
                    size="small"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                      />
                    </svg>
                  </mock-iconbutton>
                </div>
              </div>
            </div>
          </mock-typography>
        </div>
      </div>
      <mock-cardcontent
        style="padding: 0px;"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
            style="margin-top: 0.5rem;"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <mock-typography
                color="textSecondary"
                variant="h5"
              >
                Create an account
              </mock-typography>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
          >
            <form
              class="RegisterDialog-registerForm-14"
            >
              <div
                class="MuiGrid-root RegisterDialog-textFieldWrapper-15 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="firstName"
                  inputprops="[object Object]"
                  label="First Name"
                  name="firstName"
                  placeholder="First Name"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root RegisterDialog-textFieldWrapper-15 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="lastName"
                  inputprops="[object Object]"
                  label="Last Name"
                  name="lastName"
                  placeholder="Last Name"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root RegisterDialog-textFieldWrapper-15 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="emailAddress"
                  inputprops="[object Object]"
                  label="Email Address"
                  name="emailAddress"
                  placeholder="Email Address"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root RegisterDialog-textFieldWrapper-15 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="password"
                  inputprops="[object Object]"
                  label="Password"
                  name="password"
                  placeholder="Password"
                  type="password"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-space-around MuiGrid-grid-xs-11"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
                >
                  <mock-checkbox
                    checked="false"
                    classname="RegisterDialog-termsCheckbox-17"
                    color="primary"
                  />
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10"
                >
                  <mock-typography
                    classname="RegisterDialog-termsText-18"
                    color="textSecondary"
                    variant="subtitle1"
                  >
                    I have read the
                     
                    <a
                      href="/"
                      style="color: black;"
                    >
                      Terms and Conditions
                    </a>
                  </mock-typography>
                </div>
              </div>
              <div
                class="MuiGrid-root RegisterDialog-button-19 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-button
                  color="primary"
                  disabled="true"
                  fullwidth="true"
                  size="large"
                  type="submit"
                  variant="contained"
                >
                  REGISTER NOW
                </mock-button>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-typography
                  classname="RegisterDialog-termsText-18"
                  color="textSecondary"
                  variant="subtitle1"
                >
                  Have an account?
                   
                  <mock-button
                    color="primary"
                  >
                    SIGN IN
                  </mock-button>
                </mock-typography>
              </div>
            </form>
          </div>
        </div>
      </mock-cardcontent>
    </mock-card>
  </mock-dialog>
  <mock-dialog
    maxwidth="md"
    open="false"
  >
    <mock-card>
      <div
        class="MuiCardHeader-root SignInDialog-dialogHeader-21"
      >
        <div
          class="MuiCardHeader-content"
        >
          <mock-typography
            classname="MuiCardHeader-title"
            component="span"
            display="block"
            variant="h5"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-around MuiGrid-grid-xs-12"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-6"
                >
                  <mock-typography
                    variant="h4"
                  >
                    Aqua
                  </mock-typography>
                  <mock-typography
                    style="color: rgb(138, 198, 222);"
                    variant="h4"
                  >
                    link
                  </mock-typography>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-flex-end MuiGrid-grid-xs-1"
                >
                  <mock-iconbutton
                    classname="SignInDialog-closeButton-20"
                    size="small"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                      />
                    </svg>
                  </mock-iconbutton>
                </div>
              </div>
            </div>
          </mock-typography>
        </div>
      </div>
      <div
        class="MuiCollapse-container MuiCollapse-hidden"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner"
          >
            <div
              class="MuiPaper-root MuiAlert-root MuiAlert-standardSuccess MuiPaper-elevation0"
              role="alert"
            >
              <div
                class="MuiAlert-icon"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20,12A8,8 0 0,1 12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4C12.76,4 13.5,4.11 14.2, 4.31L15.77,2.74C14.61,2.26 13.34,2 12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0, 0 22,12M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
                  />
                </svg>
              </div>
              <div
                class="MuiAlert-message"
              >
                Password reset email sent to .
              </div>
              <div
                class="MuiAlert-action"
              >
                <mock-iconbutton
                  aria-label="close"
                  color="inherit"
                  size="small"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                    />
                  </svg>
                </mock-iconbutton>
              </div>
            </div>
          </div>
        </div>
      </div>
      <mock-cardcontent>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-12"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
            style="margin: 1rem 0px 1rem 0px;"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <mock-typography
                color="textSecondary"
                variant="h5"
              >
                Sign In
              </mock-typography>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-10"
          >
            <form
              class="SignInDialog-signInForm-22"
            >
              <div
                class="MuiGrid-root SignInDialog-textFieldWrapper-23 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-typography
                  classname="SignInDialog-formText-25"
                  variant="subtitle2"
                >
                  or login with email address
                </mock-typography>
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="emailAddress"
                  inputprops="[object Object]"
                  label="Email Address"
                  name="emailAddress"
                  placeholder="Email Address"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root SignInDialog-textFieldWrapper-23 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-textfield
                  error="false"
                  fullwidth="true"
                  helpertext=""
                  id="password"
                  inputprops="[object Object]"
                  label="Password"
                  name="password"
                  placeholder="Password"
                  type="password"
                  variant="outlined"
                />
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-button
                  style="text-decoration: none;"
                >
                  <mock-typography
                    color="textSecondary"
                    variant="subtitle2"
                  >
                    Forgot your password?
                  </mock-typography>
                </mock-button>
              </div>
              <div
                class="MuiGrid-root SignInDialog-button-26 MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-button
                  color="primary"
                  fullwidth="true"
                  size="large"
                  type="submit"
                  variant="contained"
                >
                  SIGN IN
                </mock-button>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
              >
                <mock-typography
                  classname="SignInDialog-formText-25"
                  color="textSecondary"
                  variant="subtitle1"
                >
                  Don't have an account?
                   
                  <mock-button
                    color="primary"
                  >
                    REGISTER
                  </mock-button>
                </mock-typography>
              </div>
            </form>
          </div>
        </div>
      </mock-cardcontent>
    </mock-card>
  </mock-dialog>
  <div
    class="Reef-noData-1"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column MuiGrid-align-items-xs-center"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <mock-typography
          color="primary"
          gutterbottom="true"
          variant="h2"
        >
          No Data Found
        </mock-typography>
      </div>
    </div>
  </div>
</div>
`;
